--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@remix-run/serve": "^2.0.1",
     "@tiptap/extension-color": "^2.1.12",
     "@tiptap/extension-list-item": "^2.1.12",
+    "@tiptap/pm": "^2.1.12",
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
     "clsx": "^2.0.0",
     "compression": "^1.7.4",
+    "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "framer-motion": "^10.16.4",
     "i18next": "^23.5.1",
@@ -41,11 +43,12 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.2",
     "remix-i18next": "^5.4.0",
-    "remix-utils": "^7.0.2",
+    "remix-utils": "^7.1.0",
     "source-map-support": "^0.5.21",
-    "tailwind-merge": "^1.14.0",
+    "tailwind-merge": "^2.0.0",
     "tiptap": "^1.32.2",
     "transition-hook": "^1.5.2",
+    "use-debouncy": "^5.0.1",
     "zod": "^3.22.2"
   },
   "devDependencies": {
@@ -54,12 +57,14 @@
     "@types/draft-js": "^0.11.14",
     "@types/express": "^4.17.19",
     "@types/morgan": "^1.9.6",
+    "@types/node": "^20.8.10",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/react-draft-wysiwyg": "^1.13.6",
     "@types/source-map-support": "^0.5.8",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
+    "animated-tailwindcss": "^4.0.0",
     "autoprefixer": "^10.4.16",
     "chokidar": "^3.5.3",
     "cssnano": "^6.0.1",
