feat: add new feature

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@remix-run/node": "^2.0.1",
     "@remix-run/react": "^2.0.1",
     "@remix-run/serve": "^2.0.1",
+    "@tanstack/react-table": "^8.10.7",
+    "@tiptap/extension-blockquote": "^2.1.12",
     "@tiptap/extension-color": "^2.1.12",
     "@tiptap/extension-list-item": "^2.1.12",
     "@tiptap/pm": "^2.1.12",
@@ -42,6 +44,7 @@
     "react-aria-components": "^1.0.0-beta.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.2",
+    "react-tag-input": "^6.8.1",
     "remix-i18next": "^5.4.0",
     "remix-utils": "^7.1.0",
     "source-map-support": "^0.5.21",
@@ -61,6 +64,7 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/react-draft-wysiwyg": "^1.13.6",
+    "@types/react-tag-input": "^6.6.4",
     "@types/source-map-support": "^0.5.8",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
